# telegram-leaderboard-bot

./: .gitignore  LICENSE  README.md  bot.py  database.db  database.py  flake.nix  leaderboard.service  pyproject.toml
bot/: __main__.py  database.py
