[tool.poetry]
name = "telegram-leaderboard-bot"
version = "2024.03.02"
description = "a leaderboard to your group chat"
authors = ["Ivy <ivyjshdx@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [
  { include = "bot" }
]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^13.15"
distro = "^1.9.0"
psutil = "^5.9.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
